[package]
name = "autovcpkg-test"
version = "0.1.0"
authors = ["Danny Angelo Carminati Grein <fungos@gmail.com>"]
edition = "2018"

[dependencies.autovcpkg]
path = "../autovcpkg"
version = "0.1.2019-10"
features = ["sdl2", "curl", "zlib"]

[build-dependencies.autovcpkg-build]
path = "../autovcpkg-build"
version = "0.1.2019-10"
# features = ["zlib"] # Features on build-dependencies seems to not work unfortunatelly
# links = "zlib" # neither this one.