[package]
name = "vgtk-test"
version = "0.1.0"
authors = ["Danny Angelo Carminati Grein <fungos@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vgtk = { git = "https://github.com/bodil/vgtk", version = "*" }

[dependencies.autovcpkg]
path = "../../autovcpkg"
version = "0.1.2019-10"
features = ["gtk"]
